<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">PEFChat</string>
    <string name="google_maps_key" translatable="false">AIzaSyDPSn3bfd7R1kpI2MUv5tw5Kl_sRsoGmVs</string>
    <string name="enter_number" tools:ignore="MissingTranslation">Enter Number</string>
    <string name="verify" tools:ignore="MissingTranslation">Verify</string>
    <string name="terms_condition" tools:ignore="MissingTranslation"><![CDATA[Terms & Condition]]></string>
    <string name="by_sign_in" tools:ignore="MissingTranslation">By signing up, you agree to our</string>
    <string name="resend_code" tools:ignore="MissingTranslation">I didn\'t receive code. Resend code</string>
    <string name="next">Next</string>
    <string name="create_account" tools:ignore="MissingTranslation">Create Account</string>
    <string name="enter_name" tools:ignore="MissingTranslation">Enter name</string>
    <string name="enter_email" tools:ignore="MissingTranslation">Enter Email</string>
    <string name="enter_organization" tools:ignore="MissingTranslation">Organization Name</string>
    <string name="enter_designation" tools:ignore="MissingTranslation">Enter Designation</string>
    <string name="sign_phone" tools:ignore="MissingTranslation">Sign in with phone number</string>
    <string name="welcome_to_pefchat" tools:ignore="MissingTranslation">Welcome to PEFChat</string>
    <string name="powered_by" tools:ignore="MissingTranslation">Powered by Pefglobal Private Limited</string>
    <string name="search">Search</string>
    <string name="key_message_notifications_settings_light" translatable="false">message_notifications_settings_light</string>
    <string name="key_message_group_notifications_settings_tone" translatable="false">message_group_notifications_settings_tone</string>
    <string name="key_message_group_notifications_settings_vibrate" translatable="false">message_group_notifications_settings_vibrate</string>
    <string name="key_message_group_notifications_settings_light" translatable="false">message_group_notifications_settings_light</string>
    <string name="key_call_notifications_settings_vibrate" translatable="false">call_notifications_settings_vibrate</string>
    <string name="key_enter_send" translatable="false">enter_send</string>
    <string name="key_message_font_size" translatable="false">message_font_size</string>
    <string name="key_wallpaper_message" translatable="false">wallpaper_message</string>
    <string name="key_conversations_tones" translatable="false">conversation_tones</string>
    <string name="key_message_notifications_settings_tone" translatable="false">message_notifications_settings_tone</string>
    <string name="key_call_notifications_settings_tone" translatable="false">call_notifications_settings_tone</string>
    <string name="key_message_notifications_settings_vibrate" translatable="false">message_notifications_settings_vibrate</string>
    <string name="user_image_transition" translatable="false">userImage</string>
    <string name="user_name_transition" translatable="false">userName</string>
    <string name="date_format_today_hour" translatable="false">HH:mm</string>
    <string name="date_format" translatable="false">d MMMM yyyy</string>
    <string name="date_format_yesterday">YESTERDAY</string>
    <string name="number">Mobile number</string>
    <string name="NoStories" tools:ignore="MissingTranslation">There\'s no stories yet, you may create one now</string>
    <string name="NoMessages">There\'s no conversations yet, you may start one now</string>
    <string name="NoContacts">There is no contacts .Please try again later or add new one</string>
    <string name="error_response_contacts">Unable to update your contacts.</string>
    <string name="name_is_too_short">the name is too short</string>
    <string name="select_picture">select an image</string>
    <string name="new_group">New group</string>
    <string name="status">Status</string>
    <string name="refresh_contacts">Refresh</string>
    <string name="add_contact">addContact</string>
    <string name="title_activity_add_members_to_group">New group</string>
    <string name="edit">Edit</string>
    <string name="view_in_ad_book">View in address book</string>
    <string name="set_back_and_keep_calm_you_will_receive_an_sms_of_verification">Set back and keep calm you will receive an sms of verification</string>
    <string name="resend">You didn\'t receive any code? Resend</string>
    <string name="enter_the_code_below_to_verify">Enter the code below to verify</string>
    <string name="enter_your_code">-- -- -- -- -- --</string>
    <string name="ok">OK</string>
    <string name="invite">INVITE</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="Ok">OK</string>
    <string name="write_something">Write something</string>
    <string name="oops_something">Oops something went wrong </string>
    <string name="no_status"> No status </string>
    <string name="no_username"> No username </string>
    <string name="title_activity_edit_name">Enter your name</string>
    <string name="title_select_contacts">Select  contact</string>
    <string name="success_response_contacts">Your contacts has been  updated successfully</string>
    <string name="exit">Exit</string>
    <string name="shareContact">Share contact</string>
    <string name="bit_rate_value_with_unit" tools:ignore="MissingTranslation">%d kbps</string>
    <string name="frame_rate_value_with_unit" tools:ignore="MissingTranslation">%d fps</string>
    <string name="label_settings" tools:ignore="MissingTranslation">Settings</string>
    <string name="msg_welcome_message" tools:ignore="MissingTranslation">Welcome to Open Video Call</string>
    <string name="label_channel_name_hint" tools:ignore="MissingTranslation">Channel name</string>
    <string name="label_encryption_key_hint" tools:ignore="MissingTranslation">Encryption key</string>
    <string name="label_join" tools:ignore="MissingTranslation">Join</string>
    <string name="label_do_network_test" tools:ignore="MissingTranslation">Test your network</string>
    <string name="label_options" tools:ignore="MissingTranslation">Options</string>
    <string name="label_network_testing" tools:ignore="MissingTranslation">Testing…</string>
    <string name="label_network_testing_placeholder" tools:ignore="MissingTranslation">-</string>
    <string name="label_network_test_result" tools:ignore="MissingTranslation">Test Result</string>
    <string name="label_debug" tools:ignore="MissingTranslation">Debug</string>
    <string name="label_quality" tools:ignore="MissingTranslation">Quality</string>
    <string name="label_rtt" tools:ignore="MissingTranslation">RTT</string>
    <string name="label_uplink_packet_loss" tools:ignore="MissingTranslation">Uplink Packet Loss</string>
    <string name="label_downlink_packet_loss" tools:ignore="MissingTranslation">Downlink Packet Loss</string>
    <string name="msg_connection_error" tools:ignore="MissingTranslation">Connection error, please check the network settings or make sure channel name/access token are valid</string>
    <string name="label_title_resolution" tools:ignore="MissingTranslation">Resolution</string>
    <string name="label_title_frame_rate" tools:ignore="MissingTranslation">Frame Rate(fps)</string>
    <string name="isTyping">Typing  …</string>
    <string name="isOffline">Offline</string>
    <string name="isOnline">Online</string>
    <string name="search_">Search …</string>
    <string name="add_new_member">Add</string>
    <string name="type_group_subject_here">Type group subject here …</string>
    <string name="provide_group_subject_and_optional_group_icon">Provide group subject and optional group icon</string>
    <string name="title_activity_edit_group_name">Enter new subject</string>
    <string name="attach_camera">Camera</string>
    <string name="attach_gallery">Image</string>
    <string name="media">Media</string>
    <string name="clear_chat">Clear Chat</string>
    <string name="view_contact">View Contact</string>
    <string name="group_info">Group Info</string>
    <string name="search_hint">Search …</string>
    <string name="alert_message_delete_conversation">Delete chat. Are you sure?</string>
    <string name="hold_to_record">Hold to record</string>
    <string name="record_audio_permission_message">Record audio permission allows you to  record audios. Please allow in App Settings for additional functionality.</string>
    <string name="write_storage_permission_message">Write External permission allows us  access to your media. Please allow in App Settings for additional functionality.</string>
    <string name="write_contacts_permission_message">Write Contacts permission allows you access to your contacts. Please allow in App Settings for additional functionality.</string>
    <string name="location_permission_message">get Location permission allows you access to your contacts. Please allow in App Settings for additional functionality.</string>
    <string name="deleting_chat">" Deleting Chat … "</string>
    <string name="copy_message">Copy</string>
    <string name="transfer_message">Forward</string>
    <string name="message_delete">Delete message?</string>
    <string name="message_copy">Text message</string>
    <string name="select_one_at_least">"At least you must select one "</string>
    <string name="participants">Participants :</string>
    <string name="slide_to_cancel_audio">Slide To Cancel</string>
    <string name="message_is_copied">Message copied</string>
    <string name="of">" of "</string>
    <string name="failed_upload_image">"Failed  upload your image "</string>
    <string name="exit_group">Exit "</string>
    <string name="group_ex">" group?</string>
    <string name="exiting_group_dialog">" Exiting group … "</string>
    <string name="deleting_group_dialog">" Deleting group … "</string>
    <string name="created_by_you_at">Created by You at</string>
    <string name="created_by">"Created by "</string>
    <string name="group_at">at</string>
    <string name="failed_to_delete_this_group_check_connection">Failed to delete this group check your connection</string>
    <string name="failed_to_exit_this_group_check_connection">Failed to exit this group check your connection</string>
    <string name="add_to_group">"Add "</string>
    <string name="member_to_group">" member to group"</string>
    <string name="adding_member">" Adding member … "</string>
    <string name="you">You</string>
    <string name="message_group_option">"Message "</string>
    <string name="view_group_option">"View "</string>
    <string name="make_admin_group_option"> an admin</string>
    <string name="make_member_group_option"> member</string>
    <string name="make_group_option"> Make </string>
    <string name="remove_group_option">"Remove "</string>
    <string name="remove_from_group">"Remove "</string>
    <string name="from_group">" from group"</string>
    <string name="failed_to_make_member_as_admin">Failed to make this member(s) as an admin please try again later</string>
    <string name="failed_to_remove_member">Failed to remove member(s) please try again later</string>
    <string name="you_created_this_group">You created  this group</string>
    <string name="he_created_this_group"> created  this group</string>
    <string name="you_left">You left</string>
    <string name="he_left">" left"</string>
    <string name="no_application_to_view_pdf">No Application Available to View PDF</string>
    <string name="transfer_message_to">"Transfer  message or Share content to "</string>
    <string name="voice_call">VOICE CALL</string>
    <string name="video_call">VIDEO CALL</string>
    <string name="phone">Phone</string>
    <string name="connecting">Connecting ...</string>
</resources>