<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/off_white"
    tools:context=".RegistrationScreens.Sign_In_Number">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:id="@+id/head2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome_to_pefchat"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="4dp"
            android:text="@string/powered_by"
            android:textColor="@color/black"
            android:layout_marginBottom="5dp"
            android:textSize="15sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="30dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/btnGoogle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="center"
                android:weightSum="3"
                android:orientation="horizontal">

                <com.rilixtech.widget.countrycodepicker.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="0dp"
                    android:layout_weight="1.1"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    app:ccp_backgroundColor="@color/white"
                    app:ccp_textColor="@color/black"
                    app:ccp_dialogTextColor="@color/black" />

                <EditText
                    android:id="@+id/etPhoneNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.9"
                    android:background="@null"
                    android:textColor="@color/black"
                    android:textColorHint="@color/line_gray"
                    android:hint="@string/enter_number"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:inputType="phone" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <Button
        android:id="@+id/btnVerify"
        android:layout_width="@dimen/btn_normal_width"
        android:layout_height="@dimen/btn_normal_height"
        android:layout_marginBottom="15dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:background="@drawable/btn_design"
        app:backgroundTint="@color/theme_green" />

</RelativeLayout>