<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/theme_green"
    tools:context=".RegistrationScreens.RegistrationScreen">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:layout_margin="15dp"
        android:layout_centerInParent="true"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:src="@drawable/profile"
                app:civ_border_color="@color/theme_green"
                app:civ_border_width="4dp"
                app:civ_shadow="true"
                app:civ_shadow_radius="5dp"
                app:civ_shadow_color="@color/line_gray"/>

            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start|center_vertical"
                android:textSize="18sp"
                android:padding="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:inputType="text"
                android:hint="@string/enter_name"
                android:background="@null"
                android:textColorHint="@color/line_gray"
                android:autofillHints="@string/enter_name"
                android:textColor="@color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/line_gray"/>

            <EditText
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start|center_vertical"
                android:textSize="18sp"
                android:padding="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@null"
                android:paddingBottom="5dp"
                android:inputType="textEmailAddress"
                android:hint="@string/enter_email"
                android:textColorHint="@color/line_gray"
                android:autofillHints="@string/enter_email"
                android:textColor="@color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/line_gray"/>

            <EditText
                android:id="@+id/user_organization"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start|center_vertical"
                android:textSize="18sp"
                android:padding="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@null"
                android:inputType="text"
                android:hint="@string/enter_organization"
                android:textColorHint="@color/line_gray"
                android:autofillHints="@string/enter_organization"
                android:textColor="@color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/line_gray"/>

            <EditText
                android:id="@+id/user_designation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start|center_vertical"
                android:textSize="18sp"
                android:padding="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@null"
                android:inputType="text"
                android:hint="@string/enter_designation"
                android:textColorHint="@color/line_gray"
                android:autofillHints="@string/enter_designation"
                android:textColor="@color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/line_gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:textSize="18sp"
                android:padding="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@null"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:id="@+id/edtPhone"
                    android:layout_height="match_parent"
                    android:gravity="start|center_vertical"
                    android:hint="@string/phone"
                    android:textColorHint="@color/line_gray"
                    android:textSize="17sp"
                    android:autofillHints="@string/enter_name"
                    android:textColor="@color/black" />

                <com.rilixtech.widget.countrycodepicker.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    app:ccp_backgroundColor="@color/white"
                    app:ccp_textColor="@color/black"
                    app:ccp_dialogTextColor="@color/black"
                    app:ccp_hidePhoneCode="true" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/line_gray"/>

            <Button
                android:id="@+id/btnCreateAccount"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:text="@string/create_account"
                android:background="@drawable/btn_design"
                android:layout_marginTop="15dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="10dp"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:backgroundTint="@color/theme_green" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>